syntax = "proto3";

package campsite.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/igor-baiborodine/api/campsite_v1";

message Booking {
  string uuid = 1;
  string email = 2;
  string fullName = 3;
  string startDate = 4;
  string endDate = 5;
  bool   active = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}